--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -2,9 +2,47 @@
 @import '_variables.scss';
 
 // Libraries
-//@import '../../../node_modules/font-awesome/css/font-awesome.css';
+@import '../../../node_modules/font-awesome/scss/font-awesome.scss';
+@import '../../../node_modules/bulma/bulma.sass';
+@import '../../../node_modules/medium-editor/src/sass/medium-editor.scss';
+@import '../../../node_modules/medium-editor/src/sass/themes/beagle.scss';
 @import '../../../node_modules/bulma/bulma.sass';
 
 body {
   background: $body-background;
 }
+
+.auth-wrapper {
+  background: url('/assets/images/bg/skyline.jpg') no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  height: 100%;
+  position: absolute; 
+  top: 0;
+  bottom: 0;
+  left: 0;
+  right: 0;
+}
+
+.auth-box {
+  margin-top: 10rem;
+
+  .card {
+    .card-header{
+      .card-header-title {
+        text-align: center;    
+      }
+    }
+    .card-footer {
+      .button {
+        border-radius: 0px;
+      }
+    }
+    .card-footer-item:not(:last-child) {
+      border-right: none;
+    }
+  }
+}
+
