--- a/src/client/styles/main.scss
+++ b/src/client/styles/main.scss
@@ -12,37 +12,35 @@ body {
   background: $body-background;
 }
 
-.auth-wrapper {
-  background: url('/assets/images/bg/skyline.jpg') no-repeat center center fixed;
-  -webkit-background-size: cover;
-  -moz-background-size: cover;
-  -o-background-size: cover;
-  background-size: cover;
-  height: 100%;
-  position: absolute; 
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-}
+@import './_auth.scss';
 
-.auth-box {
-  margin-top: 10rem;
 
-  .card {
-    .card-header{
-      .card-header-title {
-        text-align: center;    
-      }
-    }
-    .card-footer {
-      .button {
-        border-radius: 0px;
-      }
-    }
-    .card-footer-item:not(:last-child) {
-      border-right: none;
-    }
+.icon{
+  .left {
+    margin-left: -0.5rem;
+    margin-right: 0.5rem;
+  }
+  .right {
+    margin-left: 0.5rem;
+    margin-right: -0.5rem;
   }
 }
 
+.menu-label {
+  margin-top: 1rem;
+}
+
+.box {
+  border-radius: 3px;
+}
+
+.main-panel {
+  margin: 0 1rem 1rem 1rem;
+}
+
+// Desktop
+@media only screen and (min-width: 769px) {
+  .main-panel {
+    margin: 1.5rem 1.5rem 1.5rem 0;
+  }
+}
