--- a/src/client/styles/_forms.scss
+++ b/src/client/styles/_forms.scss
@@ -104,4 +104,15 @@ div.editor:focus {
     transform: translateY(-140%);
   }
 }
+
+.file-field {
+  .btn {
+    float: right;
+  }
+
+  .file-path-wrapper {
+    padding-left: 0;
+    padding-right: 10px;
+  }
+}
     
