--- a/src/client/styles/_variables.scss
+++ b/src/client/styles/_variables.scss
@@ -4,6 +4,8 @@ $pallete-grey:        #D9E1E8 !default;
 $pallete-blue-gray:   #9BAEC8 !default;
 $pallete-dark-grey:   #282C37 !default;
 
+$form-color: #42a5f5;
+
 $body-background: $pallete-grey;
 
 ////////////////////////////////////////////////
