--- a/src/client/styles/_forms.scss
+++ b/src/client/styles/_forms.scss
@@ -1,5 +1,3 @@
-$form-color: #42a5f5;
-
 /* label color */
 .input-field label {
   color: $form-color;
@@ -26,6 +24,22 @@ $form-color: #42a5f5;
 /* icon prefix focus color */
 .input-field .prefix.active {
   color: $form-color;
+}
+
+input:not([type]):focus:not([readonly]), input[type=text]:focus:not([readonly]), input[type=password]:focus:not([readonly]), input[type=email]:focus:not([readonly]), input[type=url]:focus:not([readonly]), input[type=time]:focus:not([readonly]), input[type=date]:focus:not([readonly]), input[type=datetime]:focus:not([readonly]), input[type=datetime-local]:focus:not([readonly]), input[type=tel]:focus:not([readonly]), input[type=number]:focus:not([readonly]), input[type=search]:focus:not([readonly]), textarea.materialize-textarea:focus:not([readonly]) {
+  border-bottom: 1px solid $form-color;
+  box-shadow: 0 1px 0 0 $form-color; 
+}
+
+input[type=email]:focus:not([readonly]) + label,
+input[type=password]:focus:not([readonly]) + label {
+  color: $form-color;
+}
+
+input[type=text] + label,
+input[type=email] + label,
+input[type=password] + label {
+  color: #b0bec5;
 }
 
 .editor {
